fix: 流程图执行过的边和箭头显示为绿色
mermaid 10.9.0 用 class 标识边（flowchart-link LS-{from} LE-{to}），
通过 CSS + JS 直接操作 DOM 将执行过的边设为绿色加粗，并为箭头
创建绿色 marker 替换引用。

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>