@@ -6,8 +6,8 @@ public class Transition<C> {
     private final Condition<C> condition;
 
     public Transition(String from, String to, Condition<C> condition) {
-        if (from == null || from.isBlank()) throw new IllegalArgumentException("Transition 'from' cannot be null or empty");
-        if (to == null || to.isBlank()) throw new IllegalArgumentException("Transition 'to' cannot be null or empty");
+        if (from == null || from.trim().isEmpty()) throw new IllegalArgumentException("Transition 'from' cannot be null or empty");
+        if (to == null || to.trim().isEmpty()) throw new IllegalArgumentException("Transition 'to' cannot be null or empty");
         this.from = from;
         this.to = to;
         this.condition = condition;
