@@ -1,12 +1,26 @@
 package cn.chedejun.statemachine.domain.shared;
+
+import java.util.Objects;
 import java.util.UUID;
 
-public record SnapshotId(String value) {
-    public SnapshotId {
-        if (value == null || value.isBlank())
+public final class SnapshotId {
+    private final String value;
+
+    SnapshotId(String value) {
+        if (value == null || value.trim().isEmpty())
             throw new IllegalArgumentException("SnapshotId value cannot be null or empty");
+        this.value = value;
     }
+
     public static SnapshotId generate() { return new SnapshotId(UUID.randomUUID().toString()); }
     public static SnapshotId of(String value) { return new SnapshotId(value); }
+    public String value() { return value; }
     @Override public String toString() { return value; }
+    @Override public boolean equals(Object o) {
+        if (this == o) return true;
+        if (o == null || getClass() != o.getClass()) return false;
+        SnapshotId that = (SnapshotId) o;
+        return Objects.equals(value, that.value);
+    }
+    @Override public int hashCode() { return Objects.hash(value); }
 }
